Added Git Ignore and Minor Changes

--- a/Views/Templates/Register.html
+++ b/Views/Templates/Register.html
@@ -3,7 +3,7 @@
 
     <br/><br/>
 
-    <form>
+    <form id="register_form">
         <div class="form-group label-static is-empty">
             <label for="username" class="control-label">Username</label>
             <input id="username" class="form-control" type="text" placeholder="Choose a username"/>
