--- a/Views/Templates/MainLayout.html
+++ b/Views/Templates/MainLayout.html
@@ -1,6 +1,6 @@
 $def with (page)
-$var css: static/css/bootstrap.min.css static/css/bootstrap-material-design.min.css
-$var js: static/js/jquery-3.1.0.min.js static/js/bootstrap.min.js static/js/material.min.js static/js/ripples.min.js static/js/scripty.js
+$var css: static/css/bootstrap.min.css static/css/bootstrap-material-design.min.css static/css/ripples.min.css
+$var js: https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js static/js/jquery-3.1.0.min.js static/js/bootstrap.min.js static/js/material.min.js static/js/ripples.min.js static/js/scripty.js
 
 <html lang="en">
 <head>
