--- a/Views/Templates/Register.html
+++ b/Views/Templates/Register.html
@@ -3,29 +3,27 @@
 
     <br/><br/>
 
-    <form id="register_form">
-        <div class="form-group label-static is-empty">
-            <label for="username" class="control-label">Username</label>
-            <input id="username" class="form-control" type="text" placeholder="Choose a username"/>
+    <form id="register-form">
+       <div class="form-group label-static is-empty">
+        <label for="username" class="control-label">Username</label>
+        <input id="username" class="form-control" type="text" name="username" placeholder="Choose a username" />
         </div>
 
-        <div class="form-group label-static is-empty">
+        <div class="form-group has-info label-static is-empty">
             <label for="display_name" class="control-label">Full Name</label>
-            <input id="display_name" class="form-control" type="text" placeholder="Enter your Full Name"/>
+            <input id="display_name" name ="name" class="form-control" type="text" placeholder="Enter your Full Name"/>
         </div>
 
-        <div class="form-group label-static is-empty">
+        <div class="form-group has-info label-static is-empty">
             <label for="email" class="control-label">Email</label>
-            <input id="email" class="form-control" type="text" placeholder="Enter your email"/>
+            <input id="email" name="email" class="form-control" type="email" placeholder="Enter your email"/>
         </div>
 
-        <div class="form-group label-static is-empty">
+        <div class="form-group has-info label-static is-empty">
             <label for="password" class="control-label">Password</label>
-            <input id="password" class="form-control" type="text" placeholder="Make a password"/>
+            <input id="password" name="password" class="form-control" type="password" placeholder="Make a password"/>
         </div>
 
-        <button class="btn btn-info waves-effect ripple">Submit
-            <div class="ripple_container"></div>
-        </button>
+        <button type="submit" class="btn btn-info btn-raised">Submit <div class="ripple_container"></div></button>
     </form>
 </div>
